crates/module-system/sov-modules-macros/tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.stderr
error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:16
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::Genesis::Spec`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/mod.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `Genesis::Spec`
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:19
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:109:1
    |
109 | #[expose_rpc]
    | ^^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `ApiState`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/rest/mod.rs
    |
    | pub struct ApiState<S: Spec, T = ()> {
    |                        ^^^^ required by this bound in `ApiState`
    = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: `ActualSpec` doesn't implement `std::fmt::Debug`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:118:19
    |
118 | impl TestSpec for ActualSpec {
    |                   ^^^^^^^^^^ `ActualSpec` cannot be formatted using `{:?}`
    |
    = help: the trait `std::fmt::Debug` is not implemented for `ActualSpec`
    = note: add `#[derive(Debug)]` to `ActualSpec` or manually `impl std::fmt::Debug for ActualSpec`
note: required by a bound in `TestSpec`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:13:45
    |
13  | pub trait TestSpec: Default + Send + Sync + std::fmt::Debug + 'static {
    |                                             ^^^^^^^^^^^^^^^ required by this bound in `TestSpec`
help: consider annotating `ActualSpec` with `#[derive(Debug)]`
    |
116 + #[derive(Debug)]
117 | struct ActualSpec;
    |

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:16
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                ^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `sov_modules_api::DispatchCall::Spec`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/dispatch.rs
    |
    |     type Spec: Spec;
    |                ^^^^ required by this bound in `DispatchCall::Spec`
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:28
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:28
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`
    |
note: required by a bound in `WorkingSet`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/state/accessors/scratchpad.rs
    |
    | pub struct WorkingSet<S: Spec> {
    |                          ^^^^ required by this bound in `WorkingSet`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0271]: type mismatch resolving `<QueryModule<S, <T as TestSpec>::Data> as ModuleInfo>::Spec == T`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:19
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ expected type parameter `T`, found type parameter `S`
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                -            - found type parameter
    |                |
    |                expected type parameter
    |
    = note: expected type parameter `T`
               found type parameter `S`
    = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
    = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
    = note: required for the cast from `&QueryModule<S, <T as TestSpec>::Data>` to `&dyn sov_modules_api::ModuleInfo<Spec = T>`
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `impl ::sov_modules_api::GenesisState<<Self as ::sov_modules_api::Genesis>::Spec>: GenesisState<S>` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:19
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                   ^^^^^^^ the trait `GasMeter<<S as sov_modules_api::Spec>::Gas>` is not implemented for `impl ::sov_modules_api::GenesisState<<Self as ::sov_modules_api::Genesis>::Spec>`, which is required by `impl ::sov_modules_api::GenesisState<<Self as ::sov_modules_api::Genesis>::Spec>: GenesisState<S>`
    |
    = note: required for `impl ::sov_modules_api::GenesisState<<Self as ::sov_modules_api::Genesis>::Spec>` to implement `GenesisState<S>`
note: required by a bound in `sov_modules_api::Genesis::genesis`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/mod.rs
    |
    |     fn genesis(
    |        ------- required by a bound in this associated function
...
    |         state: &mut impl GenesisState<Self::Spec>,
    |                          ^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `Genesis::genesis`
    = note: this error originates in the derive macro `Genesis` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `T: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:28
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `T`, which is required by `WorkingSet<T>: sov_modules_api::TxState<S>`
    |
    = note: required for `WorkingSet<T>` to implement `ProvableStateReader<sov_state::User>`
    = note: required for `WorkingSet<T>` to implement `sov_modules_api::TxState<S>`
note: required by a bound in `sov_modules_api::Module::call`
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/mod.rs
    |
    |     fn call(
    |        ---- required by a bound in this associated function
...
    |         _state: &mut impl TxState<Self::Spec>,
    |                           ^^^^^^^^^^^^^^^^^^^ required by this bound in `Module::call`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider further restricting this bound
    |
111 | struct Runtime<T: TestSpec + sov_modules_api::Spec, S: Spec> {
    |                            +++++++++++++++++++++++

error[E0308]: mismatched types
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:28
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^
    |                            |
    |                            expected `&Context<S>`, found `&Context<T>`
    |                            arguments to this function are incorrect
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                -            - expected type parameter
    |                |
    |                found type parameter
    |
    = note: expected reference `&sov_modules_api::Context<S>`
               found reference `&sov_modules_api::Context<T>`
    = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
    = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: method defined here
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/mod.rs
    |
    |     fn call(
    |        ^^^^
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0271]: type mismatch resolving `<QueryModule<S, <T as TestSpec>::Data> as ModuleInfo>::Spec == T`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:28
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |                            ^^^^^^^^^^^^ expected type parameter `T`, found type parameter `S`
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                -            - found type parameter
    |                |
    |                expected type parameter
    |
    = note: expected type parameter `T`
               found type parameter `S`
    = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
    = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
    = note: required for the cast from `&QueryModule<S, <T as TestSpec>::Data>` to `&dyn sov_modules_api::ModuleInfo<Spec = T>`
    = note: this error originates in the derive macro `DispatchCall` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `<T as TestSpec>::Data: std::default::Default` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:8
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `std::default::Default` is not implemented for `<T as TestSpec>::Data`, which is required by `Runtime<T, S>: std::default::Default`
    |
note: required for `Runtime<T, S>` to implement `std::default::Default`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:10
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
    = note: this error originates in the derive macro `Default` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0599]: the method `clone` exists for struct `ApiState<T>`, but its trait bounds were not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:109:1
    |
109 | #[expose_rpc]
    | ^^^^^^^^^^^^^ method cannot be called on `ApiState<T>` due to unsatisfied trait bounds
    |
   ::: $WORKSPACE/crates/module-system/sov-modules-api/src/rest/mod.rs
    |
    | pub struct ApiState<S: Spec, T = ()> {
    | ------------------------------------ doesn't satisfy `ApiState<T>: Clone`
    |
    = note: the following trait bounds were not satisfied:
            `T: sov_modules_api::Spec`
            which is required by `ApiState<T>: Clone`
    = note: this error originates in the attribute macro `expose_rpc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: consider restricting the type parameter to satisfy the trait bound
    |
109 | #[expose_rpc] where T: sov_modules_api::Spec
    |               ++++++++++++++++++++++++++++++

error[E0599]: the function or associated item `default` exists for struct `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, Zk>, ActualSpec>`, but its trait bounds were not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:127:50
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    | ------------------------------------ function or associated item `default` not found for this struct because it doesn't satisfy `_: Default`
...
116 | struct ActualSpec;
    | ----------------- doesn't satisfy `ActualSpec: sov_modules_api::Spec`
...
127 |     let runtime = &mut Runtime::<S, ActualSpec>::default();
    |                                                  ^^^^^^^ function or associated item cannot be called due to unsatisfied trait bounds
    |
   ::: $WORKSPACE/crates/module-system/sov-modules-api/src/default_spec.rs
    |
    | pub struct DefaultSpec<Da, InnerZkvm, OuterZkvm, Mode>(
    | ------------------------------------------------------ doesn't satisfy `_: TestSpec`
    |
note: the following trait bounds were not satisfied:
      `ActualSpec: sov_modules_api::Spec`
      `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:110:10
    |
110 | #[derive(Default, Genesis, DispatchCall, MessageCodec)]
    |          ^^^^^^^ unsatisfied trait bound introduced in this `derive` macro
note: the trait `sov_modules_api::Spec` must be implemented
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/spec.rs
    |
    | / pub trait Spec:
    | |     BorshDeserialize
    | |     + BorshSerialize
    | |     + Default
...   |
    | |     + Generic
    | |     + 'static
    | |_____________^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following traits define an item `default`, perhaps you need to implement one of them:
            candidate #1: `sea_orm::entity::active_model::ActiveModelTrait`
            candidate #2: `std::default::Default`
            candidate #3: `tinyvec::array::Array`

error[E0277]: the trait bound `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:127:24
    |
127 |     let runtime = &mut Runtime::<S, ActualSpec>::default();
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `TestSpec` is not implemented for `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>`
    |
    = help: the trait `TestSpec` is implemented for `ActualSpec`
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:19
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                   ^^^^^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `ActualSpec: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:127:24
    |
127 |     let runtime = &mut Runtime::<S, ActualSpec>::default();
    |                        ^^^^^^^^^^^^^^^^^^^^^^^^ the trait `sov_modules_api::Spec` is not implemented for `ActualSpec`
    |
    = help: the following other types implement trait `sov_modules_api::Spec`:
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Native>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::WitnessGeneration>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Zk>
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:32
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                                ^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, ActualSpec>: Genesis` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:129:35
    |
129 |     let mut genesis_state = state.to_genesis_state_accessor::<RT, S>(&config);
    |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Genesis` is not implemented for `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, ActualSpec>`
    |
    = help: the trait `Genesis` is implemented for `Runtime<T, S>`

error[E0277]: the trait bound `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:129:63
    |
129 |     let mut genesis_state = state.to_genesis_state_accessor::<RT, S>(&config);
    |                                                               ^^ the trait `TestSpec` is not implemented for `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>`
    |
    = help: the trait `TestSpec` is implemented for `ActualSpec`
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:19
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                   ^^^^^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `ActualSpec: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:129:63
    |
129 |     let mut genesis_state = state.to_genesis_state_accessor::<RT, S>(&config);
    |                                                               ^^ the trait `sov_modules_api::Spec` is not implemented for `ActualSpec`
    |
    = help: the following other types implement trait `sov_modules_api::Spec`:
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Native>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::WitnessGeneration>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Zk>
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:32
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                                ^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, ActualSpec>: EncodeCall<QueryModule<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, u32>>` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:135:10
    |
135 |         <RT as EncodeCall<my_module::QueryModule<S, u32>>>::encode_call(message);
    |          ^^ the trait `EncodeCall<QueryModule<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, u32>>` is not implemented for `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>, ActualSpec>`
    |
    = help: the trait `EncodeCall<QueryModule<S, <T as TestSpec>::Data>>` is implemented for `Runtime<T, S>`

error[E0277]: the trait bound `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:135:10
    |
135 |         <RT as EncodeCall<my_module::QueryModule<S, u32>>>::encode_call(message);
    |          ^^ the trait `TestSpec` is not implemented for `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>`
    |
    = help: the trait `TestSpec` is implemented for `ActualSpec`
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:19
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                   ^^^^^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `ActualSpec: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:135:10
    |
135 |         <RT as EncodeCall<my_module::QueryModule<S, u32>>>::encode_call(message);
    |          ^^ the trait `sov_modules_api::Spec` is not implemented for `ActualSpec`
    |
    = help: the following other types implement trait `sov_modules_api::Spec`:
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Native>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::WitnessGeneration>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Zk>
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:32
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                                ^^^^ required by this bound in `Runtime`

error[E0599]: the function or associated item `decode_call` exists for struct `Runtime<DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, Zk>, ActualSpec>`, but its trait bounds were not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:136:22
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    | ------------------------------------ function or associated item `decode_call` not found for this struct because it doesn't satisfy `_: DispatchCall`
...
116 | struct ActualSpec;
    | ----------------- doesn't satisfy `ActualSpec: sov_modules_api::Spec`
...
136 |     let module = RT::decode_call(&serialized_message, &mut working_set).unwrap();
    |                      ^^^^^^^^^^^ function or associated item cannot be called due to unsatisfied trait bounds
    |
   ::: $WORKSPACE/crates/module-system/sov-modules-api/src/default_spec.rs
    |
    | pub struct DefaultSpec<Da, InnerZkvm, OuterZkvm, Mode>(
    | ------------------------------------------------------ doesn't satisfy `_: TestSpec`
    |
    = note: the following trait bounds were not satisfied:
            `ActualSpec: sov_modules_api::Spec`
            `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec`
note: the trait `sov_modules_api::Spec` must be implemented
   --> $WORKSPACE/crates/module-system/sov-modules-api/src/module/spec.rs
    |
    | / pub trait Spec:
    | |     BorshDeserialize
    | |     + BorshSerialize
    | |     + Default
...   |
    | |     + Generic
    | |     + 'static
    | |_____________^
    = help: items from traits can only be used if the trait is implemented and in scope
    = note: the following trait defines an item `decode_call`, perhaps you need to implement it:
            candidate #1: `sov_modules_api::DispatchCall`

error[E0277]: the trait bound `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>: TestSpec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:136:18
    |
136 |     let module = RT::decode_call(&serialized_message, &mut working_set).unwrap();
    |                  ^^ the trait `TestSpec` is not implemented for `DefaultSpec<MockDaSpec, MockZkvm, MockZkvm, sov_modules_api::execution_mode::Zk>`
    |
    = help: the trait `TestSpec` is implemented for `ActualSpec`
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:19
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                   ^^^^^^^^ required by this bound in `Runtime`

error[E0277]: the trait bound `ActualSpec: sov_modules_api::Spec` is not satisfied
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:136:18
    |
136 |     let module = RT::decode_call(&serialized_message, &mut working_set).unwrap();
    |                  ^^ the trait `sov_modules_api::Spec` is not implemented for `ActualSpec`
    |
    = help: the following other types implement trait `sov_modules_api::Spec`:
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Native>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::WitnessGeneration>
              DefaultSpec<Da, InnerZkvm, OuterZkvm, sov_modules_api::execution_mode::Zk>
note: required by a bound in `Runtime`
   --> tests/integration/trybuild/rpc/expose_rpc_first_generic_not_spec.rs:111:32
    |
111 | struct Runtime<T: TestSpec, S: Spec> {
    |                                ^^^^ required by this bound in `Runtime`
